# CreepyCrawlAI

./: .cruft.json  .gitattributes  .gitignore  LICENSE.txt  README.md  project.godot  pyproject.toml  requirements.txt  run_headless.py
.github/: check_lint.sh  format.sh
.github/workflows/: lint.yml  test.yml  tests.yml
Game/Critter/: Critter.tscn  player.png.import
Game/FPSLabel/: FPSLabel.tscn
Game/Food/: Food.tscn  food.png.import
Game/GUI/: GUI.tscn  render_icon.png.import
Game/World/: World.tscn  background.png.import  background.tres
crawlai/: __init__.py  actor.py  camera_controls.py  constants.py  controller.py  grid.py  grid_item.py  keybindings.py  math_utils.py  position.py  turn.py  world.py
crawlai/critter/: __init__.py  ai_critter.py  base_critter.py  controllable_critter.py  critter.py
crawlai/critter/mixins/: __init__.py  ai_critter.py  ai_mixin.py  controllable_critter.py  controllable_mixin.py  observative_mixin.py  random_movement_mixin.py  selectable_critter.py  selectable_mixin.py
crawlai/game_scripts/: FPSLabel.gd  camera_controls.py  controller.py  world.py
crawlai/items/: food.py
crawlai/items/critter/: base_critter.py  critter.py
crawlai/items/critter/mixins/: ai_mixin.py  controllable_mixin.py  random_move_mixin.py  random_movement_mixin.py
crawlai/model/: environment.py  extract_inputs.py
crawlai/scripts/: run_headless.py
tests/: conftest.py  monkeypatch_godot_import.py  requirements.txt  test_ai_critter.py  test_critter.py  test_get_inputs.py  test_grid.py  test_world.py
tests/benchmarking/: benchmark.py  benchmark.txt
tests/godot_mock/: __init__.py  bindings.py
tests/helpers/: __init__.py  grid.py  thread_validation.py  timing.py
